--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,19 +1,58 @@
 <head>
-  <meta charset="UTF-8">
-  <title>Tech Blog</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>TechBolg</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+   <link rel="stylesheet" href="/css/style.css">
+ </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      
-    </header>
-      <main class="container container-fluid mt-5">
-        {{{ body }}}
-      </main>
-  </div>
-  </body>
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+     <div class="container">
+       <a href="index.html" class="navbar-brand text-light fs-3">Tech<span class="text-warning">Blog</span></a>
+       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMune"
+         aria-controls="navbarMune" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse justify-content-end " id="navbarMune">
+         <ul class="navbar-nav ms-auto">
+           <li class="nav-item">
+             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="dashbord.html">Dashbord</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="login.html">Login</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">logout</a>
+           </li>
+         </ul>
+       </div>
+     </div>
+   </nav>
+  
 
+  {{{body}}}
+
+
+ <!-- Footer -->
+   <footer class="p-5 bg-dark text-white text-center position-relative">
+     <div class="container">
+       <p class="lead">Copyright &copy; 2021 Hakeem's Prodution</p>
+
+       <a href="#" class="position-absolute bottom-0 end-0 p-5">
+         <i class="bi bi-arrow-up-circle h1"></i>
+       </a>
+     </div>
+   </footer>
+
+   <!-- javaScript Linkslk -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
+   </script>
+</body>
 </html>
