--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,12 +24,14 @@
            <li class="nav-item">
              <a class="nav-link" href="dashbord.html">Dashbord</a>
            </li>
+          {{#if loggd_in}}
            <li class="nav-item">
              <a class="nav-link" href="login.html">Login</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">logout</a>
+             <a class="nav-link" href="#" id="logout">logout</a>
            </li>
+           {{/if}}
          </ul>
        </div>
      </div>
@@ -49,5 +51,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
    </script>
+   {{#if_logged_in}}
+   <script src="/js/logout.js"></script>
 </body>
 </html>
