fixing the routes

--- a/views/dashbord.handlebars
+++ b/views/dashbord.handlebars
@@ -12,8 +12,8 @@
           </p>
           <hr>
           <div class="d-flex justify-content-start align-items-center">
-            <button type="button" class="btn btn-secondary mb-3 mx-2">Edit post</button>
-            <button type="button" class="btn btn-danger mb-3">Delet post</button>
+            <button type="button" class="btn btn-secondary mb-3 mx-2" id="editPost">Edit post</button>
+            <button type="button" class="btn btn-danger mb-3" id="deletePost">Delete post</button>
           </div>
         </div>
       </div>
@@ -33,7 +33,7 @@
       <div
         class="container d-flex justify-content-center align-items-center mb-3"
       >
-        <button type="button" class="btn btn-warning">Add new post</button>
+        <button type="button" class="btn btn-warning" id="addNewPost">Add new post</button>
       </div>
     </div>
   </div>
