--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -12,7 +12,7 @@
       </div>
       <img
         class="img-fluid w-50 d-none d-sm-block"
-        src="./public/img/showcase.svg"
+        src="/img/showcase.svg"
         alt=""
       />
     </div>
@@ -30,7 +30,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, quas
             quidem possimus dolorum esse eligendi?
           </p>
-          <hr />
+          <hr >
           <h4 class="text-start px-4">Comments</h4>
           <p class="text-start p-4"><span>{username}: </span>Lorem ipsum dolor
             sit amet consectetur, adipisicing elit. Impedit officia placeat
@@ -40,55 +40,7 @@
             <input
               type="text"
               class="form-control"
-              placeholder="add your comment"
-            />
-            <button
-              class="btn btn-outline-secondary"
-              type="button"
-            >Send</button>
-          </div>
-        </div>
-        <div class="card mb-4 bg-light">
-          <h3 class="card-title p-3 text-start">Title</h3>
-          <p class="card-text text-start px-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, quas
-            quidem possimus dolorum esse eligendi?
-          </p>
-          <hr />
-          <h4 class="text-start px-4">Comments</h4>
-          <p class="text-start p-4"><span>{username}: </span>Lorem ipsum dolor
-            sit amet consectetur, adipisicing elit. Impedit officia placeat
-            eligendi atque, ab molestiae hic doloribus eius pariatur qui! Nobis
-            error doloribus in voluptatibus atque deserunt incidunt dicta ab!</p>
-          <div class="input-group mb-3 px-2">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="add your comment"
-            />
-            <button
-              class="btn btn-outline-secondary"
-              type="button"
-            >Send</button>
-          </div>
-        </div>
-        <div class="card mb-4 bg-light">
-          <h3 class="card-title p-3 text-start">Title</h3>
-          <p class="card-text text-start px-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure, quas
-            quidem possimus dolorum esse eligendi?
-          </p>
-          <hr />
-          <h4 class="text-start px-4">Comments</h4>
-          <p class="text-start p-4"><span>{username}: </span>Lorem ipsum dolor
-            sit amet consectetur, adipisicing elit. Impedit officia placeat
-            eligendi atque, ab molestiae hic doloribus eius pariatur qui! Nobis
-            error doloribus in voluptatibus atque deserunt incidunt dicta ab!</p>
-          <div class="input-group mb-3 px-2">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="add your comment"
+              placeholder="add your comment" id="addComment"
             />
             <button
               class="btn btn-outline-secondary"
