--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,11 +7,10 @@
      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
    <link rel="stylesheet" href="/css/style.css">
  </head>
-
 <body>
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
      <div class="container">
-       <a href="index.html" class="navbar-brand text-light fs-3">Tech<span class="text-warning">Blog</span></a>
+       <a href="/home" class="navbar-brand text-light fs-3">Tech<span class="text-warning">Blog</span></a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMune"
          aria-controls="navbarMune" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -19,19 +18,19 @@
        <div class="collapse navbar-collapse justify-content-end " id="navbarMune">
          <ul class="navbar-nav ms-auto">
            <li class="nav-item">
-             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+             <a class="nav-link active" aria-current="page" href="/home">Home</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="dashbord.html">Dashbord</a>
+             <a class="nav-link" href="/dashbord">Dashbord</a>
            </li>
-          {{#if loggd_in}}
            <li class="nav-item">
-             <a class="nav-link" href="login.html">Login</a>
+             <a class="nav-link" href="/login">Login</a>
            </li>
+          {{!-- {{#if logged_in}} --}}
            <li class="nav-item">
              <a class="nav-link" href="#" id="logout">logout</a>
            </li>
-           {{/if}}
+           {{!-- {{/if}} --}}
          </ul>
        </div>
      </div>
@@ -51,7 +50,8 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
    </script>
-   {{#if_logged_in}}
+   {{!-- {{#if logged_in}} --}}
    <script src="/js/logout.js"></script>
+   {{!-- {{/if}} --}}
 </body>
 </html>
