--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,31 +1,28 @@
-<section class="p-5 p-lg-0 text-center text-sm-start">
+<section class="p-5 text-center text-sm-start">
   <div class="container">
     <div class="d-sm-flex align-items-center justify-content-between">
       <div>
         <h1>Welcome to uor Tech<span class="text-warning">Bole</span></h1>
-        <h3>Please Login or <a href="./signup.html">Sign Up</a></h3>
+        <h3>Please Login or <a href="/signup">Sign Up</a></h3>
         <div class="container mt-3">
           <div class="card">
-            <form class="px-4 py-3">
+            <form class="px-4 py-3" id="loginForm">
+              
               <div class="mb-3">
-                <label for="exampleDropdownFormEmail1" class="form-label">Email
-                  address</label>
+                <label class="form-label">Email address</label>
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleDropdownFormEmail1"
+                  id="email-login"
                   placeholder="email@example.com"
                 />
               </div>
               <div class="mb-3">
-                <label
-                  for="exampleDropdownFormPassword1"
-                  class="form-label"
-                >Password</label>
+                <label class="form-label">Password</label>
                 <input
                   type="password"
                   class="form-control"
-                  id="exampleDropdownFormPassword1"
+                  id="password-login"
                   placeholder="Password"
                 />
               </div>
@@ -36,9 +33,10 @@
       </div>
       <img
         class="img-fluid w-50 d-none d-sm-block"
-        src="./public/img/code.svg"
+        src="/img/code.svg"
         alt=""
       />
     </div>
   </div>
 </section>
+<script src="/js/login.js"></script>
