add deletePost.js editPost.js newPost.js

--- a/views/dashbord.handlebars
+++ b/views/dashbord.handlebars
@@ -12,28 +12,16 @@
           </p>
           <hr>
           <div class="d-flex justify-content-start align-items-center">
-            <button type="button" class="btn btn-secondary mb-3 mx-2" id="editPost">Edit post</button>
-            <button type="button" class="btn btn-danger mb-3" id="deletePost">Delete post</button>
+            <a href="/editpost" type="button" class="btn btn-secondary mb-3 mx-2" id="editPost">Edit post</a>
+            <a type="button" class="btn btn-danger mb-3" id="deletePost">Delete post</a>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="p-5">
-  <div class="container">
-    <div class="card mb-4 bg-light">
-      <div class="p-4">
-        <label class="form-label p-3 text-start fs-3">Title</label>
-        <input type="text" class="form-control" id="newTitle" />
-        <label class="form-label p-3 text-start fs-3">Your post</label>
-        <textarea class="form-control" id="newPost" rows="3"></textarea>
       </div>
       <div
         class="container d-flex justify-content-center align-items-center mb-3"
       >
-        <button type="button" class="btn btn-warning" id="addNewPost">Add new post</button>
+        <a href="/newPost" type="button" class="btn btn-warning" id="addNewPost">Add new
+          post</a>
       </div>
     </div>
   </div>
