--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -10,7 +10,7 @@
       <div
         class="container d-flex justify-content-center align-items-center mb-3"
       >
-        <button type="button" class="btn btn-warning" id="addNewPost">Add new post</button>
+        <button type="button" class="btn btn-warning" id="addNewPost" data-post='{{id}}'>Add new post</button>
       </div>
     </div>
   </div>
