--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="d-sm-flex align-items-center justify-content-between">
       <div>
-        <h1>Welcome <span class="text-warning">{{session.username}}</span> to uor Tech<span class="text-warning">Bole</span></h1>
+        <h1>Welcome <span class="text-warning">{{session.username}}</span> to our Tech<span class="text-warning">Bole</span></h1>
       </div>
       <img
         class="img-fluid w-50 d-none d-sm-block"
@@ -14,12 +14,13 @@
     </div>
   </div>
 </section>
-
+{{#unless loggedIn}}
 <section class="m-5">
   <div class="container">
-    <h1>Please Login or Signin to enter ur website</h1>
+    <h1>Please Login or Signin to enter our website</h1>
   </div>
 </section>
+{{/unless}}
 
 <!-- Postes  -->
 {{#each posts as |post| }}
