--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
        </button>
        <div class="collapse navbar-collapse justify-content-end " id="navbarMune">
          <ul class="navbar-nav ms-auto">
+            {{#if loggedIn}}
            <li class="nav-item">
              <a class="nav-link active" aria-current="page" href="/home">Home</a>
            </li>
@@ -24,13 +25,13 @@
              <a class="nav-link" href="/dashbord">Dashbord</a>
            </li>
            <li class="nav-item">
-             <a class="nav-link" href="/login">Login</a>
-           </li>
-          {{!-- {{#if logged_in}} --}}
-           <li class="nav-item">
              <a class="nav-link" href="#" id="logout">logout</a>
            </li>
-           {{!-- {{/if}} --}}
+           {{else}}
+           <li class="nav-item">
+             <a class="nav-link" href="/login">Login</a>
+           </li>
+         {{/if}}
          </ul>
        </div>
      </div>
@@ -50,8 +51,8 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
    </script>
-   {{!-- {{#if logged_in}} --}}
+   {{#if loggedIn}}
    <script src="/js/logout.js"></script>
-   {{!-- {{/if}} --}}
+   {{/if}}
 </body>
 </html>
