add created date

--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -3,9 +3,9 @@
     <div class="card mb-4 bg-light">
       <div class="p-4">
         <label class="form-label p-3 text-start fs-3">Title</label>
-        <input type="text" class="form-control" id="newTitle" />
+        <input type="text" class="form-control" id="newTitle" placeholder="{{post.title}}" />
         <label class="form-label p-3 text-start fs-3">Your post</label>
-        <textarea class="form-control" id="newPost" rows="3"></textarea>
+        <textarea class="form-control" id="newPost" rows="3">{{post.content}}</textarea>
       </div>
       <div
         class="container d-flex justify-content-center align-items-center mb-3"
