--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -31,6 +31,7 @@
         <div class="card mb-4 bg-light">
           <a href="/singlepost/{{post.id}}"><h3 class="card-title p-3 text-start">{{post.title}}</h3></a>
           <p class="text-start px-4">wirtin by <span>{{user.username}}</span></p>
+          <p class="text-start px-4">Creatad Date: {{format_date createdAt}}</p>
           <p class="card-text text-start px-4">
            {{post.content}}
           </p>
