ceart data in the sigle post and dashbord

--- a/views/dashbord.handlebars
+++ b/views/dashbord.handlebars
@@ -5,6 +5,7 @@
       <div class="col-md">
         <div class="card mb-4 bg-light">
           <h3 class="card-title p-3 text-start">{{post.title}}</h3>
+          <p class="text-start px-4">Creatad Date: {{format_date createdAt}}</p>
           <p class="card-text text-start px-4">
             {{post.content}}
           </p>
