--- a/views/singelPost.handlebars
+++ b/views/singelPost.handlebars
@@ -8,6 +8,7 @@
           <p class="text-start px-4">wirtin by
             <span>{{user.username}}</span>
           </p>
+          <p class="text-start px-4">Creatad Date: {{format_date createdAt}}</p>
           <p class="card-text text-start px-4">
             {{content}}
           </p>
